--- a/infra/k8s/auth-depl.yml
+++ b/infra/k8s/auth-depl.yml
@@ -17,6 +17,12 @@ spec:
       containers:
         - name: auth # this is only used for login purposes
           image: kishore007k/auth
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 ---
 # Service
