--- a/skaffold.yml
+++ b/skaffold.yml
@@ -16,3 +16,12 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+
+    - image: kishore007k/next
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "app/**/*.js"
+            dest: .
