--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "^8.2.0"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.2.1",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
