--- a/infra/k8s/tickets-depl.yml
+++ b/infra/k8s/tickets-depl.yml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-depl
+  name: tickets-depl
   labels:
-    app: auth
+    app: tickets
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: tickets
   template:
     metadata:
       labels:
-        app: auth # the selector above will match this label
+        app: tickets # the selector above will match this label
     spec:
       containers:
-        - name: auth # this is only used for login purposes
-          image: kishore007k/auth
+        - name: tickets # this is only used for login purposes
+          image: kishore007k/tickets
           env:
             - name: MONGO_URI
-              value: "mongodb://auth-mongo-srv:27017/auth"
+              value: "mongodb://tickets-mongo-srv:27017/tickets"
 
             - name: JWT_KEY
               valueFrom:
@@ -32,12 +32,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-srv
+  name: tickets-srv
 spec:
   selector:
-    app: auth
+    app: tickets
   ports:
-    - name: auth
+    - name: tickets
       protocol: TCP
       port: 3000
       targetPort: 3000
