--- a/infra/k8s/tickets-mongo-depl.yml
+++ b/infra/k8s/tickets-mongo-depl.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-mongo-depl
+  name: tickets-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth-mongo
+      app: tickets-mongo
   template: # this is the pod template
     metadata:
       labels:
-        app: auth-mongo
+        app: tickets-mongo
     spec:
       containers:
-        - name: auth-mongo
+        - name: tickets-mongo
           image: mongo
 
 ---
@@ -22,10 +22,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-mongo-srv
+  name: tickets-mongo-srv
 spec:
   selector:
-    app: auth-mongo
+    app: tickets-mongo
   ports:
   - name: db
     protocol: TCP
