--- a/skaffold.yml
+++ b/skaffold.yml
@@ -3,7 +3,7 @@ kind: Config
 deploy:
   kubectl:
     manifests:
-    - ./infra/k8s/*
+      - ./infra/k8s/*
 build:
   local:
     push: false
@@ -24,4 +24,13 @@ build:
       sync:
         manual:
           - src: "**/*.js"
+            dest: .
+
+    - image: kishore007k/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
             dest: .
